# va_finder

./: .gitignore  README.md  compose.yml
backend/: Dockerfile  README.md  constants.py  get_characters.py  main.py  pyproject.toml  requirements.txt  search_anime.py  top_anime.py  user_list.py  va_credits.py  va_info.py  vercel.json
backend/functions/: get_characters.py  search_anime.py  top_anime.py  user_list.py  va_credits.py  va_info.py
frontend/: Dockerfile  README.md  eslintrc.json  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/common/: AnimeList.js  BackButton.js  Header.js  InfoCard.js  MalButton.js  SearchBar.js
frontend/src/components/: AnimeCard.css  AnimeCard.js  AnimeList.js  CharacterCard.js  CharacterList.js  Header.js  InfoCard.js  SearchBar.js  VoiceActorInfo.js  VoiceActorList.js
frontend/src/context/: search.js
frontend/src/pages/: Anime.js  AnimeSearchBar.js  Characters.js  Home.css  Home.js  Results.js  VoiceActor.js
frontend/src/pages/Anime/: Anime.js  AnimeList.js  index.js
frontend/src/pages/Characters/: CharacterList.js  Characters.js  index.js
frontend/src/pages/Home/: Home.js
frontend/src/pages/VoiceActor/: VoiceActor.js  VoiceActorList.js  index.js
