[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["cameo <cameosam@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.105.0"
jikanpy-v4 = "^1.0.2"
python-dotenv = "^1.0.0"
uvicorn = "^0.24.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
